force-app/main/default/objects/Product__c/fields/Accepted_Donation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Donation_Rate__c</fullName>
    <label>Accepted Donation Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>