force-app/main/default/objects/Product__c/fields/Accepted_Interest_rate__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Interest_rate__c</fullName>
    <label>Accepted Interest rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>