force-app/main/default/objects/Product__c/fields/Accepted_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Payment_Amount__c</fullName>
    <label>Accepted Payment Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>