force-app/main/default/objects/Product__c/fields/Account_Extinguished_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Extinguished_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicated whether this account is extinguished or not</description>
    <inlineHelpText>Indicated whether this account is extinguished or not</inlineHelpText>
    <label>Account Extinguished Status</label>
    <type>Checkbox</type>
</CustomField>