force-app/main/default/objects/Product__c/fields/Account_Placement_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Placement_ID__c</fullName>
    <description>The placement ID in DebtNext for this account, if applicable</description>
    <inlineHelpText>The placement ID in DebtNext for this account, if applicable</inlineHelpText>
    <label>Placement ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>