force-app/main/default/objects/Product__c/fields/Account_Portfolio_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Portfolio_Code__c</fullName>
    <description>Portfolio code for account</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Portfolio code for account</inlineHelpText>
    <label>Account Portfolio Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>