force-app/main/default/objects/Product__c/fields/Account_Portfolio_Company__c.field-meta.xml
<CustomField>
    <fullName>Account_Portfolio_Company__c</fullName>
    <description>The name of the portfolio company this account belongs to</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the portfolio company this account belongs to</inlineHelpText>
    <label>Account Portfolio Company</label>
    <length>50</length>
    <type>Text</type>
</CustomField>