force-app/main/default/objects/Product__c/fields/Account_Portfolio_Group__c.field-meta.xml
<CustomField>
    <fullName>Account_Portfolio_Group__c</fullName>
    <description>The portfolio this account belongs to</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The portfolio this account belongs to</inlineHelpText>
    <label>Account Portfolio Group</label>
    <length>20</length>
    <type>Text</type>
</CustomField>