force-app/main/default/objects/Product__c/fields/Account_Portfolio_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Portfolio_ID__c</fullName>
    <description>The portfolio ID in DebtNext for this account, if applicable</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The portfolio ID in DebtNext for this account, if applicable</inlineHelpText>
    <label>Account Portfolio ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>