force-app/main/default/objects/Product__c/fields/Account_Purchase_Balance__c.field-meta.xml
<CustomField>
    <fullName>Account_Purchase_Balance__c</fullName>
    <description>The balance of this account at the time of purchase, if applicable</description>
    <inlineHelpText>The balance of this account at the time of purchase, if applicable</inlineHelpText>
    <label>Account Purchase Balance</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>