force-app/main/default/objects/Product__c/fields/Account_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Purchase_Date__c</fullName>
    <description>Date on which this account was purchased</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date on which this account was purchased</inlineHelpText>
    <label>Account Purchase Date</label>
    <type>Date</type>
</CustomField>