force-app/main/default/objects/Product__c/fields/Account_Purchase_Group__c.field-meta.xml
<CustomField>
    <fullName>Account_Purchase_Group__c</fullName>
    <description>The purchase group for this account, if applicable</description>
    <inlineHelpText>The purchase group for this account, if applicable</inlineHelpText>
    <label>Account Purchase Group</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>