force-app/main/default/objects/Product__c/fields/Account_Purchasing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Account_Purchasing_Entity__c</fullName>
    <description>The entity that purchased this account, if applicable</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The entity that purchased this account, if applicable</inlineHelpText>
    <label>Account Purchasing Entity ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>