force-app/main/default/objects/Product__c/fields/Account_Purchasing_Entity_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Purchasing_Entity_Address__c</fullName>
    <formula>IF(VALUE( Account_Purchasing_Entity__c )=4, &quot;P.O Box 9, Station B&quot;,
IF(VALUE( Account_Purchasing_Entity__c )=5, &quot;P.O Box 9, Station B&quot;,
IF(VALUE( Account_Purchasing_Entity__c )=6, &quot;P.O. Box 53, Station B&quot;,
IF(VALUE( Account_Purchasing_Entity__c )=7, &quot;P.O Box 9, Station B&quot;,
IF(VALUE( Account_Purchasing_Entity__c )=8, &quot;P.O Box 9, Station B&quot;,
IF(VALUE( Account_Purchasing_Entity__c )=9, &quot;P.O. Box 53, Station B&quot;,
IF(VALUE( Account_Purchasing_Entity__c )=10, &quot;P.O. Box 53, Station B&quot;,
IF(VALUE( Account_Purchasing_Entity__c )=11, &quot;P.O Box 9, Station B&quot;,
IF(VALUE( Account_Purchasing_Entity__c )=13, &quot;P.O Box 9, Station B&quot;,
IF(VALUE( Account_Purchasing_Entity__c )=14, &quot;P.O Box 9, Station B&quot;,
IF(VALUE( Account_Purchasing_Entity__c )=15, &quot;P.O Box 9, Station B&quot;, &quot;&quot;)
) ) ) ) ) ) ) )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Purchasing Entity Address</label>
    <type>Text</type>
</CustomField>