force-app/main/default/objects/Product__c/fields/Account_Purchasing_Entity_Value__c.field-meta.xml
<CustomField>
    <fullName>Account_Purchasing_Entity_Value__c</fullName>
    <description>Account Purchasing Entity Name</description>
    <formula>IF(VALUE( Account_Purchasing_Entity__c )=4, &quot;Canaccede Acquisitions&quot;,   
IF(VALUE( Account_Purchasing_Entity__c )=5, &quot;Aeox Acquisitions&quot;,  
IF(VALUE( Account_Purchasing_Entity__c )=6, &quot;Affirm Acquisitions LP&quot;,  
IF(VALUE( Account_Purchasing_Entity__c )=7, &quot;Canaccede L. P.&quot;,  
IF(VALUE( Account_Purchasing_Entity__c )=8, &quot;Canaccede Int&apos;l Holdings&quot;,  
IF(VALUE( Account_Purchasing_Entity__c )=9, &quot;Fidem Finance Inc&quot;,  
IF(VALUE( Account_Purchasing_Entity__c )=10, &quot;Fidem Finance Inc&quot;,  
IF(VALUE( Account_Purchasing_Entity__c )=11, &quot;Canaccede Assets Ltd&quot;,  
IF(VALUE( Account_Purchasing_Entity__c )=13, &quot;Canaccede Credit LP&quot;,
IF(VALUE( Account_Purchasing_Entity__c )=14, &quot;Canaccede Financial Group&quot;,
IF(VALUE( Account_Purchasing_Entity__c )=15, &quot;CFG Canada Funding, LLC&quot;, &quot;&quot;) 
) ) ) ) ) ) ) )))</formula>
    <inlineHelpText>Account Purchasing Entity Name</inlineHelpText>
    <label>Account Purchasing Entity Name</label>
    <type>Text</type>
</CustomField>