force-app/main/default/objects/Product__c/fields/Account_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Account_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Reviewed</label>
    <type>Checkbox</type>
</CustomField>