force-app/main/default/objects/Product__c/fields/Account_Statute_Aging__c.field-meta.xml
<CustomField>
    <fullName>Account_Statute_Aging__c</fullName>
    <description>The current aging status of this account, based on the statute aging date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The current aging status of this account, based on the statute aging date</inlineHelpText>
    <label>Account Statute Aging</label>
    <length>30</length>
    <type>Text</type>
</CustomField>