force-app/main/default/objects/Product__c/fields/Account_Statute_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Statute_Date__c</fullName>
    <description>The date on which this account falls out of statute; note that this date varies by province</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date on which this account falls out of statute; note that this date varies by province</inlineHelpText>
    <label>Account Statute Date</label>
    <type>Date</type>
</CustomField>