force-app/main/default/objects/Product__c/fields/Accruing_Interest__c.field-meta.xml
<CustomField>
    <fullName>Accruing_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the checkbox is true then record will not consider in Interest Calculation</description>
    <label>Accruing Interest</label>
    <type>Checkbox</type>
</CustomField>