force-app/main/default/objects/Product__c/fields/Active_Distressed_Account__c.field-meta.xml
<CustomField>
    <fullName>Active_Distressed_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Distressed Account</label>
    <type>Checkbox</type>
</CustomField>