force-app/main/default/objects/Product__c/fields/Active_Distressed_Days__c.field-meta.xml
<CustomField>
    <fullName>Active_Distressed_Days__c</fullName>
    <formula>TODAY() - Distressed_Account_Active_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Distressed Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>