force-app/main/default/objects/Product__c/fields/Agency_Communication_Preference__c.field-meta.xml
<CustomField>
    <fullName>Agency_Communication_Preference__c</fullName>
    <formula>TEXT( CCS_Agency__r.Communication_Preference__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Communication Preference</label>
    <type>Text</type>
</CustomField>