force-app/main/default/objects/Product__c/fields/Agency_Company__c.field-meta.xml
<CustomField>
    <fullName>Agency_Company__c</fullName>
    <formula>CCS_Agency__r.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Company</label>
    <type>Text</type>
</CustomField>