force-app/main/default/objects/Product__c/fields/Agency_Email__c.field-meta.xml
<CustomField>
    <fullName>Agency_Email__c</fullName>
    <formula>CCS_Agency__r.Business_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Email</label>
    <type>Text</type>
</CustomField>