force-app/main/default/objects/Product__c/fields/Agency_Fax__c.field-meta.xml
<CustomField>
    <fullName>Agency_Fax__c</fullName>
    <formula>CCS_Agency__r.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Fax</label>
    <type>Text</type>
</CustomField>