force-app/main/default/objects/Product__c/fields/Agency_Office__c.field-meta.xml
<CustomField>
    <fullName>Agency_Office__c</fullName>
    <formula>CCS_Agency__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Office</label>
    <type>Text</type>
</CustomField>