force-app/main/default/objects/Product__c/fields/Agency_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Agency_Phone_Number__c</fullName>
    <formula>CCS_Agency__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Phone Number</label>
    <type>Text</type>
</CustomField>