force-app/main/default/objects/Product__c/fields/Agreed_Upon_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Upon_Interest_Rate__c</fullName>
    <description>Agreed Upon Interest Rate from payment calculator</description>
    <label>Agreed Upon Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>