force-app/main/default/objects/Product__c/fields/Allocated_Amount_Fees__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Amount_Fees__c</fullName>
    <description>Allocated Amount: Fees is used for distressed collection</description>
    <inlineHelpText>Allocated Amount: Fees is used for distressed collection</inlineHelpText>
    <label>Allocated Amount: Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>