force-app/main/default/objects/Product__c/fields/Allocated_Amount_Total__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Amount_Total__c</fullName>
    <formula>Allocated_Amount_Fees__c  +  Allocated_Amount_Interest__c  +  Allocated_Amount_Principal__c</formula>
    <label>Allocated Amount Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>