force-app/main/default/objects/Product__c/fields/Amount_of_payments_missed__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_payments_missed__c</fullName>
    <description>This will served to track the default of a proposal on accumulative payments</description>
    <formula>Expected_Payment_Amount_received_To_Date__c - Total_Paid_To_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dollar value of payments missed to date</inlineHelpText>
    <label>$ Amount of payments missed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>