force-app/main/default/objects/Product__c/fields/Assignment_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Accepted_Date__c</fullName>
    <description>Date on which Agency Accepted the allocated Placement</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date on which Agency Accepted the allocated Placement</inlineHelpText>
    <label>Placement Accepted Date</label>
    <type>Date</type>
</CustomField>