force-app/main/default/objects/Product__c/fields/Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Date__c</fullName>
    <description>Date on which CFG user allocated Placement to account</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date on which CFG user allocated Placement to account</inlineHelpText>
    <label>Placement Date</label>
    <type>Date</type>
</CustomField>