force-app/main/default/objects/Product__c/fields/Balance_Provided_by_CCS_Company__c.field-meta.xml
<CustomField>
    <fullName>Balance_Provided_by_CCS_Company__c</fullName>
    <inlineHelpText>Balance Provided by CCS Company</inlineHelpText>
    <label>Balance Provided by CCS Company</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>