force-app/main/default/objects/Product__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <inlineHelpText>Bank Name</inlineHelpText>
    <label>Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scotia</fullName>
            </value>
            <value>
                <fullName>Canaccede</fullName>
            </value>
            <value>
                <fullName>Goeasy</fullName>
                <label>Easyfinancial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>