force-app/main/default/objects/Product__c/fields/Bank_Refence_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Refence_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Bank Reference Number</inlineHelpText>
    <label>Bank Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>