force-app/main/default/objects/Product__c/fields/Bank_Reference_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Bank_Reference_Quoted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Bank Reference Quoted</inlineHelpText>
    <label>Bank Reference Quoted</label>
    <length>100</length>
    <type>Text</type>
</CustomField>