force-app/main/default/objects/Product__c/fields/Buyback_Putback_Reason__c.field-meta.xml
<CustomField>
    <fullName>Buyback_Putback_Reason__c</fullName>
    <description>Buyback/Putback Reason</description>
    <inlineHelpText>Buyback/Putback Reason</inlineHelpText>
    <label>Buyback/Putback Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insolvent Prior</fullName>
            </value>
            <value>
                <fullName>Deceased Prior</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Paid Prior</fullName>
            </value>
            <value>
                <fullName>Sold in Error</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>