force-app/main/default/objects/Product__c/fields/Buyback_Putback_Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Buyback_Putback_Status_Change_Date__c</fullName>
    <description>Buyback/Putback Status Change Date is used for distressed collection</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Buyback/Putback Status Change Date is used for distressed collection</inlineHelpText>
    <label>Buyback/Putback Status Change Date</label>
    <type>Date</type>
</CustomField>