force-app/main/default/objects/Product__c/fields/Calculated_Delinquent_Days__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Delinquent_Days__c</fullName>
    <formula>CASE($RecordType.Name, 
&quot;Credit Card Account&quot;, Delinquency_Days__c - 30, 
&quot;Loan Account&quot;, Delinquency_Days__c, 
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Delinquent Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>