force-app/main/default/objects/Product__c/fields/Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Code__c</fullName>
    <description>Campaign Code</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Campaign Code</inlineHelpText>
    <label>Campaign Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>