force-app/main/default/objects/Product__c/fields/Campaign_Enroll_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Enroll_Completion_Date__c</fullName>
    <description>Campaign Enroll Completion Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Campaign Enroll Completion Date</inlineHelpText>
    <label>Campaign Enroll Completion Date</label>
    <type>DateTime</type>
</CustomField>