force-app/main/default/objects/Product__c/fields/Campaign_Enroll_Status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Enroll_Status__c</fullName>
    <description>Campaign Enroll Status</description>
    <inlineHelpText>Campaign Enroll Status</inlineHelpText>
    <label>Campaign Enroll Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>