force-app/main/default/objects/Product__c/fields/Campaign_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Expiration_Date__c</fullName>
    <description>Campaign Expiration Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Campaign Expiration Date</inlineHelpText>
    <label>Campaign Expiration Date</label>
    <type>Date</type>
</CustomField>