force-app/main/default/objects/Product__c/fields/Card_Used_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Card_Used_This_Month__c</fullName>
    <defaultValue>&quot;FALSE&quot;</defaultValue>
    <description>Whether the account was used by the customer this month, for revolving accounts</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Whether the account was used by the customer this month, for revolving accounts</inlineHelpText>
    <label>Card Used This Month</label>
    <length>10</length>
    <type>Text</type>
</CustomField>