force-app/main/default/objects/Product__c/fields/CCS_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>CCS_Account_Number__c</fullName>
    <description>CCS Account Number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>CCS Account Number(Agency Number)</inlineHelpText>
    <label>CCS Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>