force-app/main/default/objects/Product__c/fields/CCS_Agency_Total_Balance__c.field-meta.xml
<CustomField>
    <fullName>CCS_Agency_Total_Balance__c</fullName>
    <formula>CCS_Agency__r.CCS_Agency_Total_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCS Agency Total Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>