force-app/main/default/objects/Product__c/fields/CCS_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>CCS_Client_ID__c</fullName>
    <description>Bank account / reference ID</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Bank account / reference ID</inlineHelpText>
    <label>CCS Client ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>