force-app/main/default/objects/Product__c/fields/CCS_Debtor_Address__c.field-meta.xml
<CustomField>
    <fullName>CCS_Debtor_Address__c</fullName>
    <description>CCS Debtor Address</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>CCS Debtor Address</inlineHelpText>
    <label>CCS Debtor Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>