force-app/main/default/objects/Product__c/fields/CCS_Debtor_Name__c.field-meta.xml
<CustomField>
    <fullName>CCS_Debtor_Name__c</fullName>
    <description>Debtor Name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Debtor Name</inlineHelpText>
    <label>CCS Debtor Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>