force-app/main/default/objects/Product__c/fields/CCS_Proposal_Date__c.field-meta.xml
<CustomField>
    <fullName>CCS_Proposal_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CCS Proposal Date</label>
    <type>Date</type>
</CustomField>