force-app/main/default/objects/Product__c/fields/CCS_Proposed_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>CCS_Proposed_Payment_Amount__c</fullName>
    <label>CCS Proposed Payment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>