force-app/main/default/objects/Product__c/fields/CCS_Stage__c.field-meta.xml
<CustomField>
    <fullName>CCS_Stage__c</fullName>
    <description>CCS Stages</description>
    <inlineHelpText>CCS Stages</inlineHelpText>
    <label>CCS Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buyback</fullName>
            </value>
            <value>
                <fullName>Completed / Paid in Full</fullName>
            </value>
            <value>
                <fullName>Customer paying direct NLOP</fullName>
            </value>
            <value>
                <fullName>Dropped Notifications</fullName>
            </value>
            <value>
                <fullName>Failed (3 payments missed)</fullName>
            </value>
            <value>
                <fullName>In Progress (notice has been sent)</fullName>
            </value>
            <value>
                <fullName>Missed Payment</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Review Completed</fullName>
            </value>
            <value>
                <fullName>For Owner  Review</fullName>
                <label>For Owner Review</label>
            </value>
            <value>
                <fullName>Putback / Buyback Pending</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Insolvent After Purchase</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
            <value>
                <fullName>DMP Details provided</fullName>
            </value>
            <value>
                <fullName>Sent to Collections</fullName>
            </value>
            <value>
                <fullName>Putback</fullName>
            </value>
            <value>
                <fullName>Pending Assignment to Collection Agency</fullName>
            </value>
            <value>
                <fullName>Failed (Program closed by Creditor)</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>