force-app/main/default/objects/Product__c/fields/CCS_Stage_Last_Changed__c.field-meta.xml
<CustomField>
    <fullName>CCS_Stage_Last_Changed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>CCS Stage field last updated</inlineHelpText>
    <label>CCS Stage Last Changed</label>
    <type>DateTime</type>
</CustomField>