force-app/main/default/objects/Product__c/fields/Charged_Off_Amount__c.field-meta.xml
<CustomField>
    <fullName>Charged_Off_Amount__c</fullName>
    <description>The total amount that was charged off on this account, if applicable</description>
    <inlineHelpText>The total amount that was charged off on this account, if applicable</inlineHelpText>
    <label>Charge Off Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>