force-app/main/default/objects/Product__c/fields/Charged_Off_Code__c.field-meta.xml
<CustomField>
    <fullName>Charged_Off_Code__c</fullName>
    <description>The charge off code that was applied to this account, if applicable</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The charge off code that was applied to this account, if applicable</inlineHelpText>
    <label>Charge Off Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>