force-app/main/default/objects/Product__c/fields/Charged_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Charged_Off_Date__c</fullName>
    <description>The date that this account charged off, if applicable</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date that this account charged off, if applicable</inlineHelpText>
    <label>Charge Off Date</label>
    <type>Date</type>
</CustomField>