force-app/main/default/objects/Product__c/fields/Charged_Off_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Charged_Off_Reason_Code__c</fullName>
    <description>The reason code that this account was charged off for, if applicable</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The reason code that this account was charged off for, if applicable</inlineHelpText>
    <label>Charge Off Reason Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>